--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 :root{
   --mainGreen:#32722a ;
   --lightgreen:#60e74e ;
-  --mainWhite:#f3f3f3;
+  --mainWhite:#f3f3f3dc;
   --mainDark:#232528;
   --mainOrange:#da6505 ;
 }
@@ -30,4 +30,10 @@ body{
 .logo{
   width: 50px; 
   height: 50px; 
+}
+
+footer{
+  text-align: center;
+  font-family: "Oswald", sans-serif !important;
+  font-weight: bold;
 }
