--- a/src/App.css
+++ b/src/App.css
@@ -33,8 +33,20 @@ body{
   height: 50px; 
 }
 
-footer{
-  text-align: center;
-  font-family: "Oswald", sans-serif !important;
-  font-weight: bold;
+.btn-black {
+  background: transparent;
+  text-transform: capitalize;
+  font-size: 0.8rem !important;
+  color: var(--mainBlack);
+  border-radius: 0 !important;
+  border: 0.1rem solid var(--mainDark) !important;
+}
+.btn-black:hover {
+  background: var(--mainDark) !important;
+  color: var(--mainWhite) !important;
+}
+.cart-icon {
+  cursor: pointer;
+  font-size: 1.2rem;
+  color: var(--mainOrange);
 }
